tests/golden/type_errors/map_remove_incompatible_key.cd
let values: map<string, number> = {"a": 1};
remove(values, 1);
