tests/golden/type_errors/map_remove_incompatible_key.err
Type error at 2:17: map key is incompatible with map key type
  remove(values, 1);
                  ^
